Clean up project for final submission